--- a/storage.html
+++ b/storage.html
@@ -74,7 +74,7 @@
 						</div>
 					</section>
 
-				<!-- About Me -->
+				<!-- Information -->
 					<section id="info" class="two">
 						<div class="container">
 
