--- a/userscripts.html
+++ b/userscripts.html
@@ -1,166 +1,178 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>The Outpost | Userscript Experiments</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" href="
+
+<head>
+    <title>The Outpost | Userscript Experiments</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="
 //fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/main.css">
-        <link rel="stylesheet" href="assets/lib/jquery-colorbox/example3/colorbox.css">
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body>
-		<!-- Header -->
-			<div id="header">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/lib/jquery-colorbox/example3/colorbox.css">
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+</head>
 
-				<div class="top">
+<body>
+    <!-- Header -->
+    <div id="header">
 
-					<!-- Logo -->
-                        <div id="logo">
-                            <span class="image avatar48"><a href="index.html"><img src="images/avatar.png" alt="" /></a></span>
-                            <h1 id="title">the outpost</h1>
-                            <p>front-end web development,<br> anywhere in the galaxy</p>
-                        </div>
+        <div class="top">
 
-					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-chevron-circle-up">Top</span></a></li>
-								<li><a href="#info" id="info-link" class="skel-layers-ignoreHref"><span class="icon fa-info-circle">Information</span></a></li>
-								<li><a href="#screenshots" id="screenshots-link" class="skel-layers-ignoreHref"><span class="icon fa-picture-o">Screenshots</span></a></li>
-								<li id="back-link"><a href="index.html#portfolio"><span class="icon fa-chevron-circle-left">Back</span></a></li>
-							</ul>
-						</nav>
-
-				</div>
-
-				<div class="bottom">
-
-					<!-- Social Icons -->
-                        <ul class="icons">
-                            <li><a href="https://github.com/astranomaly" title="github" class="icon fa-github"><span
-                                        class="label">Github</span></a></li>
-                            <li><a href="https://pixelfed.social/Vesper" title="pixelfed" class="icon fa-instagram"><span
-                                        class="label">Photos</span></a></li>
-                            <li><a href="https://twitter.com/Astranomaly" title="twitter" class="icon fa-twitter"><span
-                                        class="label">Twitter</span></a></li>
-                            <li><a href="https://ca.linkedin.com/in/jonjreimer" title="linkedin" class="icon fa-linkedin"><span
-                                        class="label">LinkedIn</span></a></li>
-                            <li><a href="mailto:hi@theoutpost.dev" title="email" class="icon fa-envelope"><span class="label">Email</span></a>
-                            </li>
-                        </ul>
-
-				</div>
-
-			</div>
-
-		<!-- Main -->
-			<div id="main">
-
-				<!-- Intro -->
-					<section id="top" class="one dark cover userscripts">
-						<div class="container">
-
-							<header>
-								<h2 class="alt">Userscript Experiments</h2>
-								<p>Additional features <span class="fancy">&amp;</span> useability <span class='nbs'>across the web</span></p>
-                            </header>
-
-						</div>
-					</section>
-
-				<!-- About Me -->
-					<section id="info" class="two">
-						<div class="container">
-
-							<header>
-								<h2>Information</h2>
-							</header>
-
-                            <p>This was a class assignment done in our second Adobe Flash course and is (clearly) a remake of the classic Space Invaders arcade game. It's currently missing its preloader, and there are a few things I would like to tweak about the gameplay mechanics and graphics, but otherwise the game is both complete and playable.</p>
-
-                            <img class="image featured" src="images/pic08.jpg" alt="" />
-
-							<p>I previously held contests to see who could get the highest score, but then I changed where the game was stored on my website and broke the scoreboard... Oops. It's an easy fix but I no longer own Flash.</p>
-
-							<h3>Technologies</h3>
-							<p>This game uses nothing more than <strong>ActionScript 2</strong> and <strong>PHP/MySQL</strong>. The graphics were designed by-hand using the awesome <a href="https://itunes.apple.com/us/app/pixen/id525180431?mt=12">Pixen</a> graphics program for Mac OS X, and the music is the title track to "<a href="
-//www.8bitpeoples.com/products/520393-starscream-future-and-it-doesnt-work">Future, and It Doesn't Work</a>" by <strong>Infinity Shred</strong> (aka. Starscream).</p>
-                            <a class='button' href="#"><i class="fas fa-external-link-alt"></i>Userscript Template</a>
-
-						</div>
-					</section>
-
-                    <!-- Screenshots -->
-					<section id="screenshots" class="three">
-						<div class="container">
-
-							<header>
-								<h2>Screenshots</h2>
-							</header>
-
-							<div class="row">
-								<div class="4u 12u$(mobile)">
-									<article class="item">
-										<a href="images/mine.jpg" class="image fit gallery"><img src="images/twib.jpg" alt="" /></a>
-									</article>
-									<article class="item">
-										<a href="images/mine.jpg" class="image fit gallery"><img src="images/mine.jpg" alt="" /></a>
-									</article>
-								</div>
-
-								<div class="4u 12u$(mobile)">
-									<article class="item">
-										<a href="images/mine.jpg" class="image fit gallery"><img src="images/invade.jpg" alt="" /></a>
-									</article>
-									<article class="item">
-										<a href="images/mine.jpg" class="image fit gallery"><img src="images/carpentry.jpg" alt="" /></a>
-									</article>
-								</div>
-
-								<div class="4u$ 12u$(mobile)">
-									<article class="item">
-										<a href="images/mine.jpg" class="image fit gallery"><img src="images/vox.jpg" alt="" /></a>
-									</article>
-									<article class="item">
-										<a href="images/mine.jpg" class="image fit gallery"><img src="images/salsa.jpg" alt="" /></a>
-									</article>
-								</div>
-							</div>
-
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Footer -->
-            <div id="footer">
-
-                <!-- Copyright -->
-                <ul class="copyright">
-                    <li>&copy; 2019 Jon Reimer</li>
-                    <li>Design: <a href="
-            //html5up.net">HTML5 UP</a></li>
-                    <li>Hosting: <a href="https://github.com/astranomaly/astranomaly.github.io">Github Pages</a></li>
-                </ul>
-
+            <!-- Logo -->
+            <div id="logo">
+                <span class="image avatar48"><a href="index.html"><img src="images/avatar.png" alt="" /></a></span>
+                <h1 id="title">the outpost</h1>
+                <p>front-end web development,<br> anywhere in the galaxy</p>
             </div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.validate.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollzer.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-            <script src="assets/js/util.js"></script>
-            <script src="assets/lib/jquery-colorbox/jquery.colorbox-min.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-            <script src="assets/js/main.js"></script>
+            <!-- Nav -->
+            <nav id="nav">
+                <ul>
+                    <li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span
+                                class="icon fa-chevron-circle-up">Top</span></a></li>
+                    <li><a href="#info" id="info-link" class="skel-layers-ignoreHref"><span
+                                class="icon fa-info-circle">Information</span></a></li>
+                    <li><a href="#screenshots" id="screenshots-link" class="skel-layers-ignoreHref"><span
+                                class="icon fa-picture-o">Screenshots</span></a></li>
+                    <li id="back-link"><a href="index.html#portfolio"><span
+                                class="icon fa-chevron-circle-left">Back</span></a></li>
+                </ul>
+            </nav>
 
-	</body>
+        </div>
+
+        <div class="bottom">
+
+            <!-- Social Icons -->
+            <ul class="icons">
+                <li><a href="https://github.com/astranomaly" title="github" class="icon fa-github"><span
+                            class="label">Github</span></a></li>
+                <li><a href="https://pixelfed.social/Vesper" title="pixelfed" class="icon fa-instagram"><span
+                            class="label">Photos</span></a></li>
+                <li><a href="https://twitter.com/Astranomaly" title="twitter" class="icon fa-twitter"><span
+                            class="label">Twitter</span></a></li>
+                <li><a href="https://ca.linkedin.com/in/jonjreimer" title="linkedin" class="icon fa-linkedin"><span
+                            class="label">LinkedIn</span></a></li>
+                <li><a href="mailto:hi@theoutpost.dev" title="email" class="icon fa-envelope"><span
+                            class="label">Email</span></a>
+                </li>
+            </ul>
+
+        </div>
+
+    </div>
+
+    <!-- Main -->
+    <div id="main">
+
+        <!-- Intro -->
+        <section id="top" class="one dark cover userscripts">
+            <div class="container">
+
+                <header>
+                    <h2 class="alt">Userscript Experiments</h2>
+                    <p>Additional features <span class="fancy">&amp;</span> usability <span class="nbs">across the web</span></p>
+                </header>
+
+            </div>
+        </section>
+
+        <!-- Information -->
+        <section id="info" class="two">
+            <div class="container">
+
+                <header>
+                    <h2>Information</h2>
+                </header>
+
+                <p>My passion project through the majority of 2017&ndash;18 was the development of custom userscripts to streamline my web browsing experience. At the same time, I took it as an opportunity to move away from using jQuery and begin focusing on writing vanilla JavaScript, as ES6 was quickly improving the front-end <span class="nbs">development landscape</span>.
+                </p>
+
+                <p>Once accustomed to plain JavaScript, I began experimenting with <a href="https://coffeescript.org/">CoffeeScript</a> and found that the terse, Pythonic language structure increased my enjoyment of the development process, much as Pug had done while developing <a href="./storage.html">Blackie Mini Storage</a>. On the other hand, it also complicated my workflow, requiring <a href="https://nodejs.org/en/">Node</a> and <a href="https://gulpjs.com/">Gulp</a> to generate the <span class="code">.user.js</span> file, which I now use as a basis for <span class="nbs">many projects.</span></p>
+
+                <p>In 2018, I came across <a href="https://www.typescriptlang.org/">TypeScript</a> which&mdash;while much less fun to write than CoffeeScript&mdash;was far more widespread, used professionally, and promoted better coding practices, prompting me to switch. Since I was already using Node/Gulp in my CoffeeScript workflow, transitioning to TypeScript wasn't a <span class="nbs">large step.</span></p>
+
+                <p>Unfortunately, documentation for userscripts is sparse and outdated at best, so I've been forced to develop my own custom workflows and create atypical solutions to problems that could otherwise be easily-solved with access to the source code. As I plan on developing many more userscripts in the future, I created a Typescript Userscript Builder that allows a userscript project to be set up quickly and painlessly. It includes TypeScript <span class="fancy">&amp;</span> <a href="https://sass-lang.com/">Sass</a>, automatic timestamping/version incrementing, build/watch/release commands, easy metadata configuration, and other <span class="nbs">helpful features.</span></p>
+
+                <p>The first and largest userscripting project I've undertaken is a complex script for a small, private hobby community. The script&mdash;which is used by many dozens of people&mdash;inserts its own settings page, adds buttons, tweaks layouts, filters messages, and fixes small bugs. An example based off an earlier version of the script (compiled from CoffeeScript) is linked below. I've also contributed to some scripts that link books/movies on database sites to others, or created scripts simply for my own <span class="nbs">day-to-day use.</span></p>
+
+                <h3>Technologies</h3>
+                <p>The userscripts are tested in Chrome <span class='fancy'>&amp;</span> Firefox</a> using both <a href="https://tampermonkey.net/">Tampermonkey</a> and <a href="https://violentmonkey.github.io/">Violentmonkey</a>, but will likely work in any modern web browser since ES6 support is now commonplace. The scripts are loaded into Violentmonkey in Chrome during development to take advantage of how Violentmonkey auto-refreshes the script as changes <span class="nbs">are made.</span></p>
+
+                <p>The scripts typically use <a href="https://git-scm.com/">Git</a> for version control or <a href="https://greasyfork.org/en">Greasyfork</a> for hosting, depending on their scopes <span class="nbs">and needs.</span></p>
+
+                <a class='button' href="#"><i class="fab fa-github-alt"></i>Userscript Builder</a>
+                <a class='button' href="./plusgood.js"><i class="fas fa-file-code"></i>Demo Script</a>
+
+            </div>
+        </section>
+
+        <!-- Screenshots -->
+        <section id="screenshots" class="three">
+            <div class="container">
+
+                <header>
+                    <h2>Screenshots</h2>
+                </header>
+
+                <div class="row">
+                    <div class="4u 12u$(mobile)">
+                        <figure class="item">
+                            <a href="images/sc-storage-big.jpg" class="image fit gallery"><img
+                                    src="images/sc-storage-big.jpg" alt="Blackie Mini Storage desktop view" /></a>
+                        </figure>
+                    </div>
+
+                    <div class="4u 12u$(mobile)">
+                        <figure class="item">
+                            <a href="images/sc-storage-detail.jpg" class="image fit gallery"><img
+                                    src="images/sc-storage-detail.jpg"
+                                    alt="Detail view of the Blackie Mini Storage website" /></a>
+                        </figure>
+                    </div>
+
+                    <div class="4u$ 12u$(mobile)">
+                        <figure class="item">
+                            <a href="images/sc-storage-small.jpg" class="image fit gallery"><img
+                                    src="images/sc-storage-small.jpg" alt="Blackie Mini Storage tablet menu" /></a>
+                        </figure>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+    </div>
+
+    <!-- Footer -->
+    <div id="footer">
+
+        <!-- Copyright -->
+        <ul class="copyright">
+            <li>&copy; 2019 Jon Reimer</li>
+            <li>Design: <a href="
+            //html5up.net">HTML5 UP</a></li>
+            <li>Hosting: <a href="https://github.com/astranomaly/astranomaly.github.io">Github Pages</a></li>
+        </ul>
+
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.validate.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.scrollzer.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/lib/jquery-colorbox/jquery.colorbox-min.js"></script>
+    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+    <script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
