removed filler screenshots

--- a/userscripts.html
+++ b/userscripts.html
@@ -106,14 +106,14 @@
 
                 <p>The scripts typically use <a href="https://git-scm.com/">Git</a> for version control or <a href="https://greasyfork.org/en">Greasyfork</a> for hosting, depending on their scopes <span class="nbs">and needs.</span></p>
 
-                <a class='button' href="#"><i class="fab fa-github-alt"></i>Userscript Builder</a>
+                <a class='button' href="https://github.com/astranomaly/ts-userscript-builder"><i class="fab fa-github-alt"></i>Userscript Builder</a>
                 <a class='button' href="./plusgood.js"><i class="fas fa-file-code"></i>Demo Script</a>
 
             </div>
         </section>
 
         <!-- Screenshots -->
-        <section id="screenshots" class="three">
+        <!-- <section id="screenshots" class="three">
             <div class="container">
 
                 <header>
@@ -145,7 +145,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
 
     </div>
 
