tweaked lightbox style

--- a/userscripts.html
+++ b/userscripts.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/lib/jquery-colorbox/example3/colorbox.css">
+    <link rel="stylesheet" href="assets/lib/jquery-colorbox/example2/colorbox.css">
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 </head>
@@ -113,7 +113,7 @@
         </section>
 
         <!-- Screenshots -->
-        <!-- <section id="screenshots" class="three">
+        <section id="screenshots" class="three">
             <div class="container">
 
                 <header>
@@ -123,29 +123,13 @@
                 <div class="row">
                     <div class="4u 12u$(mobile)">
                         <figure class="item">
-                            <a href="images/sc-storage-big.jpg" class="image fit gallery"><img
-                                    src="images/sc-storage-big.jpg" alt="Blackie Mini Storage desktop view" /></a>
+                            <a href="images/sc-userscripts.png" class="image fit gallery"><img src="images/sc-userscripts.png"
+                                    alt="CoffeeScript vs JavaScript example" /></a>
                         </figure>
                     </div>
-
-                    <div class="4u 12u$(mobile)">
-                        <figure class="item">
-                            <a href="images/sc-storage-detail.jpg" class="image fit gallery"><img
-                                    src="images/sc-storage-detail.jpg"
-                                    alt="Detail view of the Blackie Mini Storage website" /></a>
-                        </figure>
-                    </div>
-
-                    <div class="4u$ 12u$(mobile)">
-                        <figure class="item">
-                            <a href="images/sc-storage-small.jpg" class="image fit gallery"><img
-                                    src="images/sc-storage-small.jpg" alt="Blackie Mini Storage tablet menu" /></a>
-                        </figure>
-                    </div>
-                </div>
 
             </div>
-        </section> -->
+        </section>
 
     </div>
 
