--- a/storage.html
+++ b/storage.html
@@ -67,7 +67,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Blackie Mini Storage</h2>
+								<h2>Blackie Mini Storage</h2>
 								<p>A small, responsive website for a small, <span class='nbs'>rural business</span></p>
                             </header>
 
