--- a/userscripts.html
+++ b/userscripts.html
@@ -75,7 +75,7 @@
             <div class="container">
 
                 <header>
-                    <h2 class="alt">Userscript Experiments</h2>
+                    <h2>Userscript Experiments</h2>
                     <p>Additional features <span class="fancy">&amp;</span> usability <span class="nbs">across the web</span></p>
                 </header>
 
