--- a/design.html
+++ b/design.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>The Outpost | Blackie Mini Storage</title>
+    <title>The Outpost | Graphic Design</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -71,12 +71,12 @@
     <div id="main">
 
         <!-- Intro -->
-        <section id="top" class="one dark cover storage">
+        <section id="top" class="one dark cover design">
             <div class="container">
 
                 <header>
-                    <h2 class="alt">Blackie Mini Storage</h2>
-                    <p>A small, responsive website for a small, <span class='nbs'>rural business</span></p>
+                    <h2>Graphic Design</h2>
+                    <p>Modifying the <span class='nbs'>physical world</span></p>
                 </header>
 
             </div>
@@ -90,33 +90,19 @@
                     <h2>Information</h2>
                 </header>
 
-                <p><strong>Blackie Mini Storage</strong> is a small company in rural Alberta, providing shipping
-                    containers for long-term storage. I was contacted by them and asked to make a simple, clean website
-                    that would display nicely on any screen size. It's not a content-heavy site by any means; it's
-                    simply to give <strong>Blackie Mini Storage</strong> a web presence, and allow people to find or
-                    contact them
-                    more easily.</p>
-
-                <p>It may be a small detail, but I'm really proud of the "Directions" button and how its behavior and
-                    presentation are adjusted according to the device being used. It's not something that would normally
-                    be noticed if you weren't looking for it.</p>
+                <p>Graphic design is what lead me down the Web Development path in the first place, and occasionally people ask me to do graphic designs for
+                them. Business cards & logos mostly. Luckily for me, graphic <span class="fancy">&amp;</span> web design are closely related and both were part of my
+                <span class="nbs">college education.</span></p>
 
                 <h3>Technologies</h3>
-                <p>After a year of experimenting with preprocessors, this was my first finished website preprocessed
-                    with <span class="nbs"><a href="https://pugjs.org/"> Pug (aka. Jade)</a></span> and <a
-                        href="https://sass-lang.com/">Sass</a>. It was also the first fully responsive website I had
-                    build from scratch, as that had somehow not been part of my school curriculum&hellip; It's always an
-                    exciting experience to transition from "learning" to "applying".</p>
-
-                <p>The responsive framework uses the <a href="https://www.bourbon.io/">Bourbon</a> <span
-                        class="fancy">&amp;</span> <a href="https://neat.bourbon.io/">Neat</a> Sass libraries, while the
-                    interactive map uses the <a href="https://cloud.google.com/maps-platform/">Google Maps API</a>.
-                    Fonts and icons use <a href="https://fonts.google.com/">Google Fonts</a> and <a
-                        href="https://fontawesome.com/">Font Awesome</a> respectively.</p>
-
-                <p>In order to teach myself <a href="https://wordpress.org/">Wordpress</a>, I also created a one-page
-                    template duplicating the site. While the front-end remains the same, the backend is powered by
-                    Wordpress. (The Google Maps plugin hasn't been updated for this version, however).</p>
+                <p>Pellentesque pharetra suscipit nisi vel placerat. In vitae libero ut orci maximus fermentum. Nunc ac nulla eget enim
+                    efficitur egestas nec vitae nunc. Mauris sagittis finibus sagittis. Duis posuere nisi metus, eget placerat ipsum
+                    rhoncus
+                    at. Morbi nec porta quam. Duis ornare ornare ligula. Nam commodo pellentesque urna sit amet viverra. Duis eget
+                    congue
+                    dolor, in facilisis quam. Etiam neque ligula, tincidunt ac rhoncus in, pulvinar nec ex. Pellentesque quam dui,
+                    congue a
+                    mattis nec, fermentum sit amet leo.</p>
 
                 <a class='button' href="https://blackieministorage.com"><i class="fas fa-external-link-alt"></i>Live
                     Site</a>
@@ -137,8 +123,8 @@
                 <div class="row">
                     <div class="4u 12u$(mobile)">
                         <figure class="item">
-                            <a href="images/sc-storage-big.jpg" class="image fit gallery"><img
-                                    src="images/sc-storage-big.jpg" alt="Blackie Mini Storage desktop view" /></a>
+                            <a href="images/sc-carpentry-both.jpg" class="image fit gallery"><img
+                                    src="images/sc-carpentry-both.jpg" alt="Blackie Mini Storage desktop view" /></a>
                         </figure>
                     </div>
 
