updated Max Q page

--- a/maxq.html
+++ b/maxq.html
@@ -37,8 +37,8 @@
                                 class="icon fa-chevron-circle-up">Top</span></a></li>
                     <li><a href="#info" id="info-link" class="skel-layers-ignoreHref"><span
                                 class="icon fa-info-circle">Information</span></a></li>
-                    <li><a href="#screenshots" id="screenshots-link" class="skel-layers-ignoreHref"><span
-                                class="icon fa-picture-o">Screenshots</span></a></li>
+                   <!--  <li><a href="#screenshots" id="screenshots-link" class="skel-layers-ignoreHref"><span
+                                class="icon fa-picture-o">Screenshots</span></a></li> -->
                     <li id="back-link"><a href="index.html#portfolio"><span
                                 class="icon fa-chevron-circle-left">Back</span></a></li>
                 </ul>
@@ -90,25 +90,19 @@
                     <h2>Information</h2>
                 </header>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum orci libero, dictum sed augue id, mattis rutrum
-                augue. Duis convallis commodo placerat. Donec sed ultrices urna. Fusce at turpis erat. Curabitur eu tempor turpis, vel
-                varius justo. Sed laoreet mauris nec augue euismod, ac tempus magna fermentum. Vestibulum et justo et felis consequat
-                sodales. Integer elit lectus, tincidunt sed semper sit amet, posuere in nunc. Nunc sed justo arcu. Nulla finibus
-                molestie ligula, sed scelerisque libero tincidunt vel. In pellentesque dictum faucibus. Vivamus ornare lectus et tellus
-                sagittis, id aliquet nibh ultricies. Cras ultrices dictum odio ut accumsan. Phasellus dapibus metus magna, ut efficitur
-                ex efficitur sed. Aliquam ut malesuada mauris. Morbi in lobortis massa, vitae aliquet libero.</p>
+                <p>Founded in Vancouver, Canada by Kerry <span class="fancy">&amp;</span> Janet McLuhan, <strong>Max Q Live</strong> is developing technology and establishing global connections using the internet as its platform. <strong>Max Q Live</strong> is supported primarily by Fortune 500 companies and non-profits dedicated to changing the world. They hope to create a global social network that connects people from around the world in a face-to-face manner, promoting a spirit of wanderlust and adventure while teaching about the issues people face around the globe.</p>
 
                 <h3>Technologies</h3>
-                <p>Pellentesque pharetra suscipit nisi vel placerat. In vitae libero ut orci maximus fermentum. Nunc ac nulla eget enim
-                efficitur egestas nec vitae nunc. Mauris sagittis finibus sagittis. Duis posuere nisi metus, eget placerat ipsum rhoncus
-                at. Morbi nec porta quam. Duis ornare ornare ligula. Nam commodo pellentesque urna sit amet viverra. Duis eget congue
-                dolor, in facilisis quam. Etiam neque ligula, tincidunt ac rhoncus in, pulvinar nec ex. Pellentesque quam dui, congue a
-                mattis nec, fermentum sit amet leo.</p>
+                <p>As the sole web developer at <strong>Max Q Live</strong> for the duration of my stay, my tasks covered all areas of the web stack from front-end to back-end to tangentially-related IT. The primary goal was to develop a demo website that could be shown to investors. The website comprised hundreds of pages designed in Adobe Photoshop and written mainly in HTML, CSS, and <a href="https://jquery.com/">jQuery</a>, with portions of PHP added to enable templating and speed <span class="nbs">up production.</span></p>
+
+                <p>Server management was also an occasional part of my job, managing a LAMP (Linux, Apache, MySQL, PHP) server and writing a few Bash scripts to streamline common maintenance tasks. Networking between servers, computers, and video cameras was also often necessary (along with some video editing) since the development of video streaming software is one focus of <span class="nbs">the company.</span></p>
+
+                <p>Unfortunately, <strong>Max Q Live</strong> is not accessible to the public at <span class="nbs">this time.</span></p>
             </div>
         </section>
 
         <!-- Screenshots -->
-        <section id="screenshots" class="three">
+        <!-- <section id="screenshots" class="three">
             <div class="container">
 
                 <header>
@@ -140,7 +134,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
 
     </div>
 
