updated Design page; still need photos

--- a/design.html
+++ b/design.html
@@ -91,23 +91,13 @@
                 </header>
 
                 <p>Graphic design is what lead me down the Web Development path in the first place, and occasionally people ask me to do graphic designs for
-                them. Business cards & logos mostly. Luckily for me, graphic <span class="fancy">&amp;</span> web design are closely related and both were part of my
-                <span class="nbs">college education.</span></p>
+                them. Business cards & logos mostly. Luckily for me, graphic <span class="fancy">&amp;</span> web design are closely related and both were part of my <span class="nbs">college education.</span></p>
+                <p>Over the past few years I've been contracted by companies of many sizes, with customer reaches that span from private to local community to province-wide. Most recently, I updated <a href="http://viafoods.com/">ViaBar's</a> website and packaging, along with shooting their product photography. I also designed and printed mail flyers and business cards for <span class="nbs">Reimer Carpentry.</span></p>
 
                 <h3>Technologies</h3>
-                <p>Pellentesque pharetra suscipit nisi vel placerat. In vitae libero ut orci maximus fermentum. Nunc ac nulla eget enim
-                    efficitur egestas nec vitae nunc. Mauris sagittis finibus sagittis. Duis posuere nisi metus, eget placerat ipsum
-                    rhoncus
-                    at. Morbi nec porta quam. Duis ornare ornare ligula. Nam commodo pellentesque urna sit amet viverra. Duis eget
-                    congue
-                    dolor, in facilisis quam. Etiam neque ligula, tincidunt ac rhoncus in, pulvinar nec ex. Pellentesque quam dui,
-                    congue a
-                    mattis nec, fermentum sit amet leo.</p>
+                <p>The packaging designs for ViaBar were done exclusively in Adobe Illustrator, with Adobe Photoshop being used to touch up the product photography. The work for Reimer Carpentry was done using a mix of Illustrator and Photoshop. Recently, I've moved over to Affinity Designer <span class="fancy">&amp;</span> Affinity Photo for all my <span class="nbs">design work.</span></p>
 
-                <a class='button' href="https://blackieministorage.com"><i class="fas fa-external-link-alt"></i>Live
-                    Site</a>
-                <a class='button' href="https://astranomaly.com/bms-wordpress/"><i
-                        class="fab fa-wordpress"></i>Wordpress Demo</a>
+                <a class='button' href="http://viafoods.com/"><i class="fas fa-external-link-alt"></i>Current ViaBar site</a>
 
             </div>
         </section>
