--- a/design.html
+++ b/design.html
@@ -120,19 +120,18 @@
 
                     <div class="4u 12u$(mobile)">
                         <figure class="item">
-                            <a href="images/sc-storage-detail.jpg" class="image fit gallery"><img
-                                    src="images/sc-storage-detail.jpg"
+                            <a href="images/sc-via.jpg" class="image fit gallery"><img
+                                    src="images/sc-via.jpg"
                                     alt="Detail view of the Blackie Mini Storage website" /></a>
                         </figure>
                     </div>
 
-                    <div class="4u$ 12u$(mobile)">
+                    <div class="4u 12u$(mobile)">
                         <figure class="item">
-                            <a href="images/sc-storage-small.jpg" class="image fit gallery"><img
-                                    src="images/sc-storage-small.jpg" alt="Blackie Mini Storage tablet menu" /></a>
+                            <a href="images/sc-tmh-flyer.jpg" class="image fit gallery"><img src="images/sc-tmh-flyer-th.jpg"
+                                    alt="Detail view of the Blackie Mini Storage website" /></a>
                         </figure>
                     </div>
-                </div>
 
             </div>
         </section>
