updated TWIB page

--- a/twib.html
+++ b/twib.html
@@ -90,32 +90,15 @@
                     <h2>Information</h2>
                 </header>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum orci libero, dictum sed augue id, mattis rutrum
-                    augue. Duis convallis commodo placerat. Donec sed ultrices urna. Fusce at turpis erat. Curabitur eu tempor turpis,
-                    vel
-                    varius justo. Sed laoreet mauris nec augue euismod, ac tempus magna fermentum. Vestibulum et justo et felis
-                    consequat
-                    sodales. Integer elit lectus, tincidunt sed semper sit amet, posuere in nunc. Nunc sed justo arcu. Nulla finibus
-                    molestie ligula, sed scelerisque libero tincidunt vel. In pellentesque dictum faucibus. Vivamus ornare lectus et
-                    tellus
-                    sagittis, id aliquet nibh ultricies. Cras ultrices dictum odio ut accumsan. Phasellus dapibus metus magna, ut
-                    efficitur
-                    ex efficitur sed. Aliquam ut malesuada mauris. Morbi in lobortis massa, vitae aliquet libero.</p>
+                <p>These days, nearly everyone checks the weather online. So why is it that all the popular weather sites are so unintuitive and bland? The Weather Is Beautiful (aka. <strong>TWIB</strong>) was a school project I made to fix these problems. There is no clutter. There is no adspace. There is just <span class="nbs">the weather.</span></p>
+
+                <p>This project is a proof-of-concept for a single-serving weather web-app that is dynamically driven and focused on visual
+                aesthetics. If it's the middle of the day, the background will change to a soft blue to reflect this. Nighttime? It's now a deep purple. Your location is automatically detected, but by signing up you can change your location and save <span class="nbs">two favourites.</span></p>
 
                 <h3>Technologies</h3>
-                <p>Pellentesque pharetra suscipit nisi vel placerat. In vitae libero ut orci maximus fermentum. Nunc ac nulla eget enim
-                    efficitur egestas nec vitae nunc. Mauris sagittis finibus sagittis. Duis posuere nisi metus, eget placerat ipsum
-                    rhoncus
-                    at. Morbi nec porta quam. Duis ornare ornare ligula. Nam commodo pellentesque urna sit amet viverra. Duis eget
-                    congue
-                    dolor, in facilisis quam. Etiam neque ligula, tincidunt ac rhoncus in, pulvinar nec ex. Pellentesque quam dui,
-                    congue a
-                    mattis nec, fermentum sit amet leo.</p>
+                <p><strong>TWIB</strong> is based on a framework of HTML, CSS, and <a href="https://jquery.com/">jQuery</a>. It uses AJAX to receive JSON from the <a href="https://apicommunity.wunderground.com/weatherapi/topics/end-of-service-for-the-weather-underground-api">Weather Underground's API</a>, which is then used to update the website's design and content. The user account system uses PHP to connect to MySQL databases.</p>
 
-                <a class='button' href="https://blackieministorage.com"><i class="fas fa-external-link-alt"></i>Live
-                    Site</a>
-                <a class='button' href="https://astranomaly.com/bms-wordpress/"><i
-                        class="fab fa-wordpress"></i>Wordpress Demo</a>
+                <strong class="notice">Unfortunately, the Weather Underground API was shut down <span class="nbs">on 12/31/2018</span>, <span class="nbs">therefore marking the <span class="nbs">end of TWIB.</span></span></strong>
 
             </div>
         </section>
@@ -131,16 +114,15 @@
                 <div class="row">
                     <div class="4u 12u$(mobile)">
                         <figure class="item">
-                            <a href="images/sc-twib-1.jpg" class="image fit gallery"><img
-                                    src="images/sc-twib-1.jpg" alt="Screenshot showing Celsius" /></a>
+                            <a href="images/sc-twib-4.jpg" class="image fit gallery"><img
+                                    src="images/sc-twib-4.jpg" alt="Screenshot showing final design" /></a>
                         </figure>
                     </div>
 
                     <div class="4u 12u$(mobile)">
                         <figure class="item">
-                            <a href="images/sc-twib-2.jpg" class="image fit gallery"><img
-                                    src="images/sc-twib-2.jpg"
-                                    alt="Screenshot showing winter and fahrenheit" /></a>
+                            <a href="images/sc-twib-1.jpg" class="image fit gallery"><img src="images/sc-twib-1.jpg"
+                                    alt="Screenshot showing Celsius" /></a>
                         </figure>
                     </div>
 
